# petbox

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .mcp.json  AGENTS.md  BannedSymbols.txt  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  Dockerfile  PetBox.slnx  YobaBox.slnx  build.cake  build.cs  build.ps1  build.sh  global.json  run_dev.bat
.config/: dotnet-tools.json
.factory/: mcp.json
.githooks/: pre-commit
.playwright-cli/: page-2026-07-07T08-55-03-121Z.yml  page-2026-07-07T08-55-11-878Z.yml  page-2026-07-07T08-55-36-641Z.yml  page-2026-07-07T08-56-00-031Z.yml  page-2026-07-07T08-56-09-117Z.yml
agent/: README.md  enroll.sh  petbox-deploy-agent.service  petbox_deploy_agent.py  test_caddy.py  test_host_report.py  test_reconcile.py  test_runspec.py
deploy/: RESTORE.md  compose.yaml
doc/: agent-interaction-audit.md  agent-onboarding.md  agent-wiring.md  clients-standards.md  data-client-pattern.md  decision-log.md  dogfooding-backlog.md  e2e-plan.md  methodology-engine.md  methodology-lexicon.md  methodology.md  plan.md  proposal-system-projects.md  service-layer-phases-2-3-notes.md  settings-taxonomy.md  spec.md  storage-and-apis.md  ui-conventions.md  user-stories.md
infra/: Caddyfile.fragment  caddy.json
scripts/: set-gh-secrets.sh  (+1 more)
src/clients-py/petbox-client/: .gitignore  README.md  pyproject.toml
src/clients-py/petbox-client/src/petbox_client/: __init__.py  client.py  config.py  data.py  types.py
src/clients-py/petbox-client/tests/: test_cache.py  test_client.py  test_config.py  test_data.py
(+1728 files in other folders)
