[project]
name = "petbox-client"
version = "0.0.0"
description = "Python SDK for PetBox — config client (ETag-aware polling) and a Data-module client (raw parameterized SQL pass-through)."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "stdray" }]
keywords = ["petbox", "configuration", "config", "data", "sql"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
# Zero runtime dependencies — stdlib only (urllib + threading), mirroring the TS SDK.
dependencies = []

[project.urls]
Homepage = "https://github.com/stdray/petbox"
Repository = "https://github.com/stdray/petbox"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/petbox_client"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"] # assert is expected in tests

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
